Fix squished styling

--- a/react/src/stylesheets/layout/_sidebar.scss
+++ b/react/src/stylesheets/layout/_sidebar.scss
@@ -1,3 +1,3 @@
 .sidebar-card {
-  max-width: 250px;
+  width: 250px;
 }
